<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Political Preparedness</string>

    <!-- TODO: Add necessary string values -->

    <string name="follow">Follow</string>
    <string name="unfollow">Unfollow</string>
    <string name="election_date">Election date:</string>
    <string name="address">Address</string>
    <string name="state">State:</string>
    <string name="zip">Zip code: </string>
    <string name="sources">Online information sources</string>
    <string name="location_name">Location name:</string>
    <string name="line_one">Line 1:</string>
    <string name="line_two">Line 2:</string>
    <string name="city">City:</string>
    <string name="upcoming_elections">Upcoming Elections</string>
    <string name="saved_elections">Saved Elections</string>
    <string name="content_description_link">link to external information</string>
    <string name="search">Search</string>
    <string name="my_location">Use my location</string>
    <string name="representatives">Representatives</string>
    <string name="address_line_one">Address Line 1</string>
    <string name="address_line_two">Address Line 2</string>
    <string name="representative_name">Representative name</string>
    <string name="settings">Settings</string>
    <string name="search_by_address">Representative by address</string>
    <string name="representative_fragment">Representative</string>
    <string name="election_info">Election Information</string>
    <string name="election_info_url">Election Website</string>
    <string name="ballot_url">Ballot Website</string>

    <!--    Error messages      -->
    <string name="network_error">A network error occurred</string>
    <string name="link_error">Something went wrong</string>
    <string name="loading_data_error">Error while loading the data</string>
    <string name="address_unavailable">Unavailable address</string>
    <string name="address_unavailable_error">The election physical address is no available. Please check out the online information sources</string>
    <string name="election_toolbar_error">Election name</string>
    <string name="location_required_error">Enable the location services to get the current location.</string>
    <string name="get_current_location_error">Something went wrong when getting the current location</string>
    <string name="missed_data">Please fill out the required fields</string>
    <string name="permission_denied">Grant the location permission in order to get the current location</string>
    <string name="elections">Elections</string>


</resources>
