<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:motion="http://schemas.android.com/tools">

    <!-- TODO: Add data binding node -->
    <data>
        <import type="android.view.View"/>

        <variable
            name="viewModel"
            type="com.example.android.politicalpreparedness.representative.RepresentativeViewModel" />
    </data>

    <!-- TODO: Add motion scene to hide form on vertical scroll. -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <!--        <androidx.constraintlayout.motion.widget.MotionLayout
        app:layoutDescription="@xml/motion_representative"
-->
        <!-- TODO: Add visual styling and content -->
        <TextView
            android:id="@+id/search_title"
            style="@style/elections_style"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_margin="@dimen/margin_normal"
            android:text="@string/search_by_address"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textStyle="bold"
            app:drawableEndCompat="@drawable/ic_arrow_down"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <!-- TODO: Add data binding value -->
        <!-- TODO: Add visual styling and content -->
        <EditText
            android:id="@+id/address_line_1"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginStart="@dimen/margin_normal"
            android:layout_marginTop="@dimen/margin_small"
            android:layout_marginEnd="@dimen/margin_normal"
            android:hint="@string/address_line_one"
            android:inputType="textPostalAddress"
            android:text="@={viewModel.lineOne}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/search_title" />

        <!-- TODO: Add data binding value -->
        <!-- TODO: Add visual styling and content -->
        <EditText
            android:id="@+id/address_line_2"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginStart="@dimen/margin_normal"
            android:layout_marginTop="@dimen/margin_small"
            android:layout_marginEnd="@dimen/margin_normal"
            android:hint="@string/address_line_two"
            android:inputType="textPostalAddress"
            android:text="@={viewModel.lineTwo}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/address_line_1" />

        <!-- TODO: Add data binding value -->
        <!-- TODO: Add visual styling and content -->
        <EditText
            android:id="@+id/city"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginStart="@dimen/margin_normal"
            android:layout_marginTop="@dimen/margin_small"
            android:layout_marginEnd="@dimen/margin_small"
            android:hint="@string/city"
            android:inputType="textPostalAddress"
            android:text="@={viewModel.city}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/address_line_2" />

        <!-- TODO: Add default values from provided resources  -->
        <!-- TODO: Add data binding value -->
        <!-- TODO: Add visual styling and content -->
        <Spinner
            android:id="@+id/state"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginStart="@dimen/margin_normal"
            android:layout_marginTop="@dimen/margin_small"
            android:layout_marginEnd="@dimen/margin_small"
            android:autofillHints="State"
            android:entries="@array/states"
            android:inputType="textPostalAddress"
            android:textSize="18sp"
            android:selectedItemPosition="@={viewModel.stateInt}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/city"
            app:stateValue="@{viewModel.stateString}" />

        <!-- TODO: Add data binding value -->
        <!-- TODO: Add visual styling and content -->
        <EditText
            android:id="@+id/zip"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginStart="@dimen/margin_normal"
            android:layout_marginTop="@dimen/margin_small"
            android:layout_marginEnd="@dimen/margin_normal"
            android:autofillHints="Zip"
            android:hint="@string/zip"
            android:inputType="number"
            android:maxLength="5"
            android:text="@={viewModel.zip}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/state" />

        <!-- TODO: Add visual styling and label -->
        <Button
            android:id="@+id/button_search"
            style="@style/election_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_normal"
            android:text="@string/search"
            app:layout_constraintEnd_toStartOf="@id/button_location"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintHorizontal_chainStyle="spread"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/zip" />

        <!-- TODO: Add visual styling and content -->
        <Button
            android:id="@+id/button_location"
            style="@style/election_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/my_location"
            app:layout_constraintBottom_toBottomOf="@+id/button_search"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/button_search"
            app:layout_constraintTop_toTopOf="@+id/button_search" />

        <!-- TODO: Add visual styling and content -->
        <TextView
            android:id="@+id/representative_title"
            style="@style/elections_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_normal"
            android:text="@string/representatives"
            android:textAlignment="center"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/button_location" />

        <!-- TODO: Add Representatives RecyclerView -->
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/representative_recyclerView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="@dimen/margin_normal"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/representative_title"
            app:layout_constraintVertical_bias="0.0"
            app:repItems="@{viewModel.representative}"
            tools:itemCount="3"
            tools:listitem="@layout/representative_item" />

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fadeVisible="@{viewModel.loadingData}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/representative_title"
            app:layout_constraintVertical_bias="0.4" />


        <ImageView
            android:id="@+id/db_connection_error_img"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fadeVisible="@{viewModel.networkError}"
            android:src="@drawable/ic_connection_error"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/representative_title" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>