<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <!-- TODO: Add data binding node for Voter Info ViewModel -->
    <data>

        <variable
            name="viewModel"
            type="com.example.android.politicalpreparedness.election.VoterInfoViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="com.example.android.politicalpreparedness.MainActivity">

        <!-- TODO: Add title to toolbar -->
        <androidx.appcompat.widget.Toolbar
            android:id="@+id/election_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/colorSecondary"
            android:padding="@dimen/padding_medium"
            android:singleLine="true"
            android:textAlignment="center"
            app:title="@{viewModel.dataElection.name}"
            app:layout_constraintTop_toTopOf="parent"
            app:titleTextColor="@color/white"
            tools:title="Elections Date" />

        <!-- TODO: Add visual styling -->
        <TextView
            android:id="@+id/election_date_label"
            style="@style/elections_style"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_normal"
            android:layout_marginTop="@dimen/margin_normal"
            android:text="@string/election_date"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/election_name" />

        <TextView
            android:id="@+id/election_date"
            style="@style/elections_style"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/padding_medium"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/election_date_label"
            app:layout_constraintTop_toBottomOf="@id/election_name"
            tools:text="12 November 2055" />

        <!-- TODO: Add visual styling and content -->
        <androidx.constraintlayout.widget.Group
            android:id="@+id/address_group"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:fadeView="@{viewModel.electionAdministrationBody.physicalAddress}"
            app:constraint_referenced_ids="election_address_label, location_name_label,
            line_one_label, line_two_label, city_election_label, location_name, line_one, line_two,
            city_election, address_linear_layout" />

        <TextView
            android:id="@+id/election_address_label"
            style="@style/elections_style"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_small"
            android:text="@string/address"
            app:fadeView="@{viewModel.electionAdministrationBody.physicalAddress}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/election_date"
            tools:text="@string/address" />

        <TextView
            android:id="@+id/information_source_label"
            style="@style/elections_style"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_normal"
            android:layout_marginTop="@dimen/margin_large"
            android:layout_marginEnd="@dimen/margin_normal"
            android:text="@string/sources"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/address_linear_layout"
            tools:text="@string/sources" />

        <LinearLayout
            android:id="@+id/election_info_url_layout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:clickable="true"
            android:background="?attr/selectableItemBackgroundBorderless"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/information_source_label"
            >

            <TextView
                android:id="@+id/election_info_url"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginStart="@dimen/margin_normal"
                android:layout_marginTop="@dimen/margin_normal"
                android:layout_marginEnd="@dimen/margin_normal"
                app:linkVoteInfo="@{viewModel.electionAdministrationBody.electionInfoUrl}"
                tools:text="Election Url"/>

            <ImageView
                android:layout_width="25dp"
                android:layout_height="wrap_content"
                android:src="@drawable/noun_external_link_2863113"
                android:contentDescription="@string/content_description_link" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/ballot_info_url_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:clickable="true"
            android:background="?attr/selectableItemBackgroundBorderless"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/election_info_url_layout">

            <TextView
                android:id="@+id/ballot_info_url"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginStart="@dimen/margin_normal"
                android:layout_marginTop="@dimen/margin_normal"
                android:layout_marginEnd="@dimen/margin_normal"
                app:linkVoteInfo="@{viewModel.electionAdministrationBody.ballotInfoUrl}"
                tools:text="Ballot Url" />

            <ImageView
                android:layout_width="25dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_small"
                android:contentDescription="@string/content_description_link"
                android:src="@drawable/noun_external_link_2863113" />


        </LinearLayout>

        <Button
            android:id="@+id/save_election_button"
            style="@style/election_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_large"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:onClick="@{() -> viewModel.handleSavedElections()}"
            app:savedSate="@{viewModel.isSaved}"
            tools:text="Follow" />

        <TextView
            android:id="@+id/location_name_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_normal"
            android:layout_marginTop="@dimen/margin_normal"
            android:text="@string/location_name"
            app:fadeView="@{viewModel.electionAdministrationBody.physicalAddress}"
            app:layout_constraintEnd_toStartOf="@+id/vote_info_barrier"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/election_address_label" />

        <TextView
            android:id="@+id/location_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_small"
            android:layout_marginEnd="@dimen/margin_normal"
            android:text="@{viewModel.electionAdministrationBody.physicalAddress.toString()}"
            app:fadeView="@{viewModel.electionAdministrationBody.physicalAddress}"
            app:layout_constraintBaseline_toBaselineOf="@+id/location_name_label"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/vote_info_barrier" />

        <TextView
            android:id="@+id/line_one_label"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_normal"
            android:layout_marginTop="@dimen/margin_small"
            android:text="@string/line_one"
            app:fadeView="@{viewModel.electionAdministrationBody.physicalAddress}"
            app:layout_constraintEnd_toStartOf="@+id/vote_info_barrier"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/location_name_label" />

        <TextView
            android:id="@+id/line_one"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_small"
            android:layout_marginEnd="@dimen/margin_normal"
            android:text="@{viewModel.electionAdministrationBody.physicalAddress.line1}"
            app:fadeView="@{viewModel.electionAdministrationBody.physicalAddress}"
            app:layout_constraintBaseline_toBaselineOf="@+id/line_one_label"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/vote_info_barrier" />

        <TextView
            android:id="@+id/line_two_label"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_normal"
            android:layout_marginTop="@dimen/margin_small"
            android:text="@string/line_two"
            app:fadeView="@{viewModel.electionAdministrationBody.physicalAddress}"
            app:layout_constraintEnd_toStartOf="@+id/vote_info_barrier"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/line_one_label" />

        <TextView
            android:id="@+id/line_two"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_small"
            android:layout_marginEnd="@dimen/margin_normal"
            android:text="@{viewModel.electionAdministrationBody.physicalAddress.line2}"
            app:fadeView="@{viewModel.electionAdministrationBody.physicalAddress}"
            app:layout_constraintBaseline_toBaselineOf="@+id/line_two_label"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/vote_info_barrier" />

        <TextView
            android:id="@+id/city_election_label"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_normal"
            android:layout_marginTop="@dimen/margin_small"
            android:text="@string/city"
            app:fadeView="@{viewModel.electionAdministrationBody.physicalAddress}"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/line_two_label"
            app:layout_constraintEnd_toStartOf="@+id/vote_info_barrier"/>

        <TextView
            android:id="@+id/city_election"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_small"
            android:layout_marginEnd="@dimen/margin_normal"
            android:text="@{viewModel.electionAdministrationBody.physicalAddress.city}"
            app:fadeView="@{viewModel.electionAdministrationBody.physicalAddress}"
            app:layout_constraintBaseline_toBaselineOf="@+id/city_election_label"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/vote_info_barrier" />

        <LinearLayout
            android:id="@+id/address_linear_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_normal"
            android:layout_marginTop="@dimen/margin_small"
            android:layout_marginEnd="@dimen/margin_normal"
            android:orientation="horizontal"
            app:fadeView="@{viewModel.electionAdministrationBody.physicalAddress}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/city_election_label">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical"
                android:padding="@dimen/padding_small">

                <TextView
                    android:id="@+id/state_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/margin_small"
                    android:text="@string/state" />

                <TextView
                    android:id="@+id/state"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@{viewModel.electionAdministrationBody.physicalAddress.state}"
                    tools:text="California" />

            </LinearLayout>

            <View
                android:layout_width="@dimen/margin_normal"
                android:layout_height="0dp" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical"
                android:padding="@dimen/padding_small">

                <TextView
                    android:id="@+id/zip_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/margin_small"
                    android:text="@string/zip" />

                <TextView
                    android:id="@+id/zip"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@{viewModel.electionAdministrationBody.physicalAddress.zip}"
                    tools:text="93505" />
            </LinearLayout>
        </LinearLayout>

        <androidx.constraintlayout.widget.Barrier
            android:id="@+id/vote_info_barrier"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:barrierDirection="end"
            app:constraint_referenced_ids="location_name_label, line_one_label,
            line_two_label, city_election_label"
            tools:layout_editor_absoluteX="61dp"
            tools:layout_editor_absoluteY="152dp" />

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fadeVisible="@{viewModel.isLoadingData}"
            android:gravity="center"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/db_connection_error_img"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fadeVisible="@{viewModel.isDataLoadingError}"
            android:src="@drawable/ic_connection_error"
            android:gravity="center"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>